# para_backend_lecture

./: .gitignore  README.md
first/student/: .env.sample  pyproject.toml
first/student/src/: main.py
first/student/src/common/: __init__.py
first/student/src/controllers/: hello.py
first/student/src/services/: hello.py
first/teacher/src/: main.py
first/teacher/src/controllers/: bye.py  hello.py
first/teacher/src/services/: bye.py  hello.py
second/homework/: pyproject.toml
second/homework/answer/: pyproject.toml
second/homework/answer/src/controllers/: member.py
second/homework/answer/src/repository/: member.py
second/homework/answer/src/services/: member.py
second/homework/src/: main.py
second/homework/src/controllers/: member.py
second/homework/src/repository/: member.py
second/homework/src/services/: member.py
second/student/: .env.sample  pyproject.toml
second/student/src/common/: db.py
second/student/src/controllers/: board.py
second/student/src/repository/: board.py
second/student/src/services/: board.py
second/teacher/: .env.sample  pyproject.toml
second/teacher/src/: main.py
second/teacher/src/common/: db.py
second/teacher/src/controllers/: board.py
second/teacher/src/repository/: board.py
second/teacher/src/services/: board.py
third/teacher/: pyproject.toml
third/teacher/src/: main.py
third/teacher/src/common/: openai.py
third/teacher/src/controllers/: search.py
third/teacher/src/repository/: data.py
third/teacher/src/services/: search.py
